# aiida-worker

./: AI_CONTEXT.md  aiida_bridge.py  aris-aiida-worker.code-workspace  launch_relax.py  localhost-setup.yaml  main.py  package-lock.json  pyproject.toml  requirements-quantumespresso.txt  requirements.txt  sabr-aiida-worker.code-workspace  test.ipynb  todo
core/: data_importers.py  engine.py  events.py  node_utils.py  process_utils.py  scripts.py  submission_utils.py  utils.py
models/: schemas.py
repository/: README.md
repository/analysis/: common_utils.py
repository/analysis/born_charges/: born_analyzer.py
repository/analysis/entries/: run_born.py
routers/: data.py  execution.py  process.py  registry.py  submission.py
specializations/: __init__.py
specializations/quantumespresso/: __init__.py  data_types.py
specializations/quantumespresso/examples/: README.md
specializations/quantumespresso/examples/archives/: epw_test_pb.aiida
specializations/quantumespresso/examples/code/: ph.yaml  pw-7.5@localhost.yaml  pw.yaml
tests/: test_common_utils.py  test_execution.py  test_group_export.py  test_infrastructure_capabilities.py  test_infrastructure_export.py  test_node_summary.py  test_recent_nodes.py  test_submission_utils.py
