[project]
name = "aiida-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiida-core>=2.7.3",
    "aiida-quantumespresso>=4.16.0",
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "uvicorn>=0.41.0",
]
